Worked on mobile, fixed navigation

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -10,4 +10,5 @@
 
 .header {
     padding-bottom:70px;
+    padding-top:15px;
 }
