--- a/sass/elements/_details.scss
+++ b/sass/elements/_details.scss
@@ -23,7 +23,7 @@
 .movie-details {
     position:relative;
     z-index:9999;
-    padding:55px 0 0;
+    padding:15px 0 0;
     a {
         cursor:pointer;
         &:hover, &:focus, &:active {
