--- a/sass/elements/_hero.scss
+++ b/sass/elements/_hero.scss
@@ -5,7 +5,7 @@
     max-width:100%;
     height:100%;
     overflow:hidden;
-    padding:1% 5%;
+    padding:1% 5% 5%;
     margin-bottom:30px;
     h3 {
         color:$color-atlantis;
